--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <meta name="author" content="William Huang" />
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
